hphp/hack/test/typecheck/array/allow_returning_darray_of_subtype.php.exp
File "allow_returning_darray_of_subtype.php", line 7, characters 44-66:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 33, characters 24-25:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 33, characters 30-37:
  This type constraint is violated
  File "hackarray.hhi", line 33, characters 30-37:
  Expected `arraykey`
  File "allow_returning_darray_of_subtype.php", line 7, characters 51-55:
  But got `mixed`
